classDiagram
    %% Classes du domaine
    class Compte {
        +uint ID
        +string Email
        +string Prenom
        +string Nom
        -string MotDePasse
        +float64 CautionRestante
        +bool IsBibliothecaire
        +List~Emprunt~ Emprunts
        +IsEnRetard() bool
        +GetNomComplet() string
    }

    class Livre {
        +uint ID
        +string Titre
        +string CodeISBN
        +List~string~ Auteurs
        +List~Exemplaire~ Exemplaires
    }

    class Exemplaire {
        +uint ID
        +string CodeBarre
        +bool EstEmprunte
        +float64 Caution
        +string Travee
        +string Etagere
        +string Niveau
        +uint LivreID
    }

    class Emprunt {
        +uint ID
        +time.Time DateEmprunt
        +time.Time DateLimite
        +time.Time DateRetour
        +bool Rendu
        +uint CompteID
        +uint ExemplaireID
        +IsEnRetard() bool
    }

    %% Patron Builder
    class CompteBuilder {
        -Compte compte
        +NewCompteBuilder() CompteBuilder
        +SetID(id: uint) CompteBuilder
        +SetEmail(email: string) CompteBuilder
        +SetPrenom(prenom: string) CompteBuilder
        +SetNom(nom: string) CompteBuilder
        +SetMotDePasse(motDePasse: string) CompteBuilder
        +SetCautionRestante(caution: float64) CompteBuilder
        +SetIsBibliothecaire(flag: bool) CompteBuilder
        +Build() Compte
        +Reset() void
    }

    class LivreBuilder {
        -Livre livre
        +NewLivreBuilder() LivreBuilder
        +SetID(id: uint) LivreBuilder
        +SetTitre(titre: string) LivreBuilder
        +SetCodeISBN(codeIsbn: string) LivreBuilder
        +SetAuteurs(auteurs: List~string~) LivreBuilder
        +Build() Livre
        +Reset() void
    }

    %% Relations Builder
    CompteBuilder ..> Compte : creates
    LivreBuilder ..> Livre : creates

    %% Relations métier
    Compte "1" -- "0..*" Emprunt : emprunts
    Emprunt "1" -- "1" Exemplaire
    Livre "1" -- "0..*" Exemplaire : exemplaires
